--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/index.css">
     <title>Pokedex</title>
 </head>
 <body>
     <button id="loadData">Cargar Datos</button>
     <button id="viewData">Mostrar Datos</button>
 
-    <ul id="printData"></ul>
+    <div id="printData"></div>
 
     <script type="module" src="/src/controllers/index.js"></script>
 </body>
